// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth0APIClient logIn with credentials should call client.client.login by default 1`] = `
Object {
  "nonce": undefined,
  "realm": undefined,
  "sso": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials when \`overrides._useCrossAuth\` is true should call client.login 1`] = `
Object {
  "nonce": undefined,
  "realm": undefined,
  "sso": undefined,
  "state": undefined,
  "username": "foo",
}
`;

exports[`Auth0APIClient logIn with credentials when \`overrides._useCrossAuth\` is true should fail when in popup mode 1`] = `"Cross origin login is not supported in popup mode"`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call authorize when redirect===true 1`] = `
Object {
  "nonce": undefined,
  "sso": undefined,
  "state": undefined,
}
`;

exports[`Auth0APIClient logIn with social/enterprise (without username and email) should call popup.authorize when redirect===false 1`] = `
Object {
  "nonce": undefined,
  "sso": undefined,
  "state": undefined,
}
`;
